trunk/Archive2/ee/4e34a9d6aa0d72/output
main.cpp: In function 'int main()':
main.cpp:31:24: error: use of deleted function 'pure<T>::operator U() [with U = long int; T = int]'
     std::cout << (long)i;
                        ^
main.cpp:21:5: note: declared here
     operator U() = delete;
     ^
